k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lab-service
spec:
  selector:
    app: nginx-lab
  ports:
    - port: 80
      targetPort: 80
